// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Wrapper it should have interactive styles 1`] = `
.c0 {
  color: #5E6C84;
  line-height: 1.1428571428571428;
  margin: 2px 2px 2px 0;
  padding: 1px 2px 2px 2px;
  border-radius: 3px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: pointer;
}

.c0:hover {
  background-color: #F4F5F7;
}

.c0:active {
  background-color: #DEEBFF;
}

.c0:focus {
  cursor: pointer;
  box-shadow: 0 0 0 2px #4C9AFF;
  outline: none;
}

<span
  className="c0"
/>
`;

exports[`Wrapper it should have selected styles 1`] = `
.c0 {
  color: #5E6C84;
  line-height: 1.1428571428571428;
  margin: 2px 2px 2px 0;
  padding: 1px 2px 2px 2px;
  border-radius: 3px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: pointer;
  box-shadow: 0 0 0 2px #4C9AFF;
  outline: none;
}

<span
  className="c0"
/>
`;

exports[`Wrapper it should not have interactive or selected styles 1`] = `
.c0 {
  color: #5E6C84;
  line-height: 1.1428571428571428;
  margin: 2px 2px 2px 0;
  padding: 1px 2px 2px 2px;
  border-radius: 3px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

<span
  className="c0"
/>
`;
